re-create notebooks

--- a/notebooks/ensemble_ex_03.ipynb
+++ b/notebooks/ensemble_ex_03.ipynb
@@ -85,7 +85,9 @@
     "For both the gradient-boosting and random forest models, create a validation\n",
     "curve using the training set to assess the impact of the number of trees on\n",
     "the performance of each model. Evaluate the list of parameters `param_range =\n",
-    "np.array([1, 2, 5, 10, 20, 50, 100])` and use the mean absolute error."
+    "np.array([1, 2, 5, 10, 20, 50, 100, 200])` and score it using\n",
+    "`neg_mean_absolute_error`. Remember to set `negate_score=True` to recover the\n",
+    "right sign of the Mean Absolute Error."
    ]
   },
   {
