--- a/notebooks/cross_validation_validation_curve.ipynb
+++ b/notebooks/cross_validation_validation_curve.ipynb
@@ -225,6 +225,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## What is noise?\n",
+    "\n",
+    "In this notebook, we talked about the fact that datasets can contain noise.\n",
+    "\n",
+    "There can be several kinds of noises, among which we can identify:\n",
+    "\n",
+    "- measurement imprecision from a physical sensor (e.g. temperature);\n",
+    "- reporting errors by human collectors.\n",
+    "\n",
+    "Those unpredictable data acquisition errors can happen either on the input\n",
+    "features or in the target variable (in which case we often name this label\n",
+    "noise).\n",
+    "\n",
+    "In practice, the **most common source of \"noise\" is not necessarily a\n",
+    "real noise**, but rather **the absence of the measurement of a relevant\n",
+    "feature**.\n",
+    "\n",
+    "Consider the following example: when predicting the price of a house, the\n",
+    "surface area will surely impact the price. However, the price will also be\n",
+    "influenced by whether the seller is in a rush and decides to sell the house\n",
+    "below the market price. A model will be able to make predictions based on the\n",
+    "former but not the latter, so \"seller's rush\" is a source of noise since it\n",
+    "won't be present in the features.\n",
+    "\n",
+    "Since this missing/unobserved feature is randomly varying from one sample to\n",
+    "the next, it appears as if the target variable was changing because of the\n",
+    "impact of a random perturbation or noise, even if there were no significant\n",
+    "errors made during the data collection process (besides not measuring the\n",
+    "unobserved input feature).\n",
+    "\n",
+    "One extreme case could happen if there where samples in the dataset with\n",
+    "exactly the same input feature values but different values for the target\n",
+    "variable. That is very unlikely in real life settings, but could the case if\n",
+    "all features are categorical or if the numerical features were discretized\n",
+    "or rounded up naively. In our example, we can imagine two houses having\n",
+    "the exact same features in our dataset, but having different prices because\n",
+    "of the (unmeasured) seller's rush.\n",
+    "\n",
+    "Apart from these extreme case, it's hard to know for sure what should qualify\n",
+    "or not as noise and which kind of \"noise\" as introduced above is dominating.\n",
+    "But in practice, the best ways to make our predictive models robust to noise\n",
+    "are to avoid overfitting models by:\n",
+    "\n",
+    "- selecting models that are simple enough or with tuned hyper-parameters as\n",
+    "  explained in this module;\n",
+    "- collecting a larger number of labeled samples for the training set."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary:\n",
     "\n",
     "In this notebook, we saw:\n",
