--- a/notebooks/parameter_tuning_ex_03.ipynb
+++ b/notebooks/parameter_tuning_ex_03.ipynb
@@ -62,6 +62,11 @@
     "- the parameter `with_std` of the `StandardScaler` with possible values `True`\n",
     "  or `False`.\n",
     "\n",
+    "Use mean absolute error as model performance metric. Remember that a score\n",
+    "function should always return higher values for better performance.\n",
+    "Therefore, we should choose the negative version as the score metric:\n",
+    "`neg_mean_absolute_error`.\n",
+    "\n",
     "Notice that in the notebook \"Hyperparameter tuning by randomized-search\" we\n",
     "pass distributions to be sampled by the `RandomizedSearchCV`. In this case we\n",
     "define a fixed grid of hyperparameters to be explored. Using a `GridSearchCV`\n",
