apply ruff formatting

--- a/notebooks/parameter_tuning_sol_03.ipynb
+++ b/notebooks/parameter_tuning_sol_03.ipynb
@@ -108,7 +108,7 @@
     "model_random_search = RandomizedSearchCV(\n",
     "    model,\n",
     "    param_distributions=param_distributions,\n",
-    "    scoring='neg_mean_absolute_error',\n",
+    "    scoring=\"neg_mean_absolute_error\",\n",
     "    n_iter=20,\n",
     "    n_jobs=2,\n",
     "    verbose=1,\n",
@@ -208,9 +208,7 @@
     "}\n",
     "\n",
     "cv_results = cv_results.rename(columns=column_name_mapping)\n",
-    "cv_results = cv_results[column_name_mapping.values()].sort_values(\n",
-    "    \"mean test score\"\n",
-    ")"
+    "cv_results = cv_results[column_name_mapping.values()].sort_values(\"mean test score\")"
    ]
   },
   {
