--- a/notebooks/parameter_tuning_ex_03.ipynb
+++ b/notebooks/parameter_tuning_ex_03.ipynb
@@ -52,8 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `RandomizedSearchCV` with `n_iter=20` to find the best set of\n",
-    "hyperparameters by tuning the following parameters of the `model`:\n",
+    "Use `RandomizedSearchCV` with `n_iter=20` and\n",
+    "`scoring=\"neg_mean_absolute_error\"` to tune the following hyperparameters\n",
+    "of the `model`:\n",
     "\n",
     "- the parameter `n_neighbors` of the `KNeighborsRegressor` with values\n",
     "  `np.logspace(0, 3, num=10).astype(np.int32)`;\n",
@@ -62,10 +63,10 @@
     "- the parameter `with_std` of the `StandardScaler` with possible values `True`\n",
     "  or `False`.\n",
     "\n",
-    "Use mean absolute error as model performance metric. Remember that a score\n",
-    "function should always return higher values for better performance.\n",
-    "Therefore, we should choose the negative version as the score metric:\n",
-    "`neg_mean_absolute_error`.\n",
+    "The `scoring` function is expected to return higher values for better models,\n",
+    "since grid/random search objects **maximize** it. Because of that, error\n",
+    "metrics like `mean_absolute_error` must be negated (using the `neg_` prefix)\n",
+    "to work correctly (remember lower errors represent better models).\n",
     "\n",
     "Notice that in the notebook \"Hyperparameter tuning by randomized-search\" we\n",
     "pass distributions to be sampled by the `RandomizedSearchCV`. In this case we\n",
