--- a/notebooks/parameter_tuning_sol_03.ipynb
+++ b/notebooks/parameter_tuning_sol_03.ipynb
@@ -58,8 +58,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `RandomizedSearchCV` with `n_iter=20` to find the best set of\n",
-    "hyperparameters by tuning the following parameters of the `model`:\n",
+    "Use `RandomizedSearchCV` with `n_iter=20` and\n",
+    "`scoring=\"neg_mean_absolute_error\"` to tune the following hyperparameters\n",
+    "of the `model`:\n",
     "\n",
     "- the parameter `n_neighbors` of the `KNeighborsRegressor` with values\n",
     "  `np.logspace(0, 3, num=10).astype(np.int32)`;\n",
@@ -68,10 +69,10 @@
     "- the parameter `with_std` of the `StandardScaler` with possible values `True`\n",
     "  or `False`.\n",
     "\n",
-    "Use mean absolute error as model performance metric. Remember that a score\n",
-    "function should always return higher values for better performance.\n",
-    "Therefore, we should choose the negative version as the score metric:\n",
-    "`neg_mean_absolute_error`.\n",
+    "The `scoring` function is expected to return higher values for better models,\n",
+    "since grid/random search objects **maximize** it. Because of that, error\n",
+    "metrics like `mean_absolute_error` must be negated (using the `neg_` prefix)\n",
+    "to work correctly (remember lower errors represent better models).\n",
     "\n",
     "Notice that in the notebook \"Hyperparameter tuning by randomized-search\" we\n",
     "pass distributions to be sampled by the `RandomizedSearchCV`. In this case we\n",
@@ -208,7 +209,9 @@
     "}\n",
     "\n",
     "cv_results = cv_results.rename(columns=column_name_mapping)\n",
-    "cv_results = cv_results[column_name_mapping.values()].sort_values(\"mean test score\")"
+    "cv_results = cv_results[column_name_mapping.values()].sort_values(\n",
+    "    \"mean test score\"\n",
+    ")"
    ]
   },
   {
@@ -275,7 +278,7 @@
     "holding on any axis of the parallel coordinate plot. You can then slide (move)\n",
     "the range selection and cross two selections to see the intersections.\n",
     "\n",
-    "Selecting the best performing models (i.e. below MEA score of ~47), we\n",
+    "Selecting the best performing models (i.e. below MEA score of ~47 k$), we\n",
     "observe that **in this case**:\n",
     "\n",
     "- scaling the data is important. All the best performing models use scaled\n",
