--- a/notebooks/03_categorical_pipeline_ex_02.ipynb
+++ b/notebooks/03_categorical_pipeline_ex_02.ipynb
@@ -160,26 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Analysis\n",
-    "\n",
-    "From an accuracy point of view, the result is almost exactly the same. The\n",
-    "reason is that `HistGradientBoostingClassifier` is expressive and robust\n",
-    "enough to deal with misleading ordering of integer coded categories (which was\n",
-    "not the case for linear models).\n",
-    "\n",
-    "However from a computation point of view, the training time is much longer:\n",
-    "this is caused by the fact that `OneHotEncoder` generates more features than\n",
-    "`OrdinalEncoder`; for each unique categorical value a column is created.\n",
-    "\n",
-    "Note that the current implementation `HistGradientBoostingClassifier` is still\n",
-    "incomplete, and once sparse representation are handled correctly, training\n",
-    "time might improve with such kinds of encodings.\n",
-    "\n",
-    "The main take away message is that arbitrary integer coding of categories is\n",
-    "perfectly fine for `HistGradientBoostingClassifier` and yields fast training\n",
-    "times.\n",
-    "\n",
-    "Which encoder should I use?\n",
+    "## Which encoder should I use?\n",
     "\n",
     "|                  | Meaningful order              | Non-meaningful order |\n",
     "| ---------------- | ----------------------------- | -------------------- |\n",
