--- a/notebooks/cross_validation_grouping.ipynb
+++ b/notebooks/cross_validation_grouping.ipynb
@@ -189,9 +189,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we read carefully, 13 writers wrote the digits of our dataset, accounting\n",
-    "for a total amount of 1797 samples. Thus, a writer wrote several times the\n",
-    "same numbers. Let's suppose that the writer samples are grouped. Subsequently,\n",
+    "If we read carefully, `load_digits` loads a copy of the **test set** of the\n",
+    "UCI ML hand-written digits dataset, which consists of 1797 images by\n",
+    "**13 different writers**. Thus, each writer wrote several times the same\n",
+    "numbers. Let's suppose the dataset is ordered by writer. Subsequently,\n",
     "not shuffling the data will keep all writer samples together either in the\n",
     "training or the testing sets. Mixing the data will break this structure, and\n",
     "therefore digits written by the same writer will be available in both the\n",
