--- a/notebooks/ensemble_ex_03.ipynb
+++ b/notebooks/ensemble_ex_03.ipynb
@@ -107,6 +107,24 @@
     "ensemble. However, the scores reach a plateau where adding new trees just\n",
     "makes fitting and scoring slower.\n",
     "\n",
+    "Now repeat the analysis for the gradient boosting model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "# Write your code here."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Gradient boosting models overfit when the number of trees is too large. To\n",
     "avoid adding a new unnecessary tree, unlike random-forest gradient-boosting\n",
     "offers an early-stopping option. Internally, the algorithm uses an\n",
@@ -115,9 +133,9 @@
     "improving for several iterations, it stops adding trees.\n",
     "\n",
     "Now, create a gradient-boosting model with `n_estimators=1_000`. This number\n",
-    "of trees is certainly too large. Change the parameter `n_iter_no_change`\n",
-    "such that the gradient boosting fitting stops after adding 5 trees to avoid\n",
-    "deterioration of the overall generalization performance."
+    "of trees is certainly too large as we have seen above. Change the parameter\n",
+    "`n_iter_no_change` such that the gradient boosting fitting stops after adding\n",
+    "5 trees to avoid deterioration of the overall generalization performance."
    ]
   },
   {
