--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -157,6 +157,9 @@
     "preprocessor = ColumnTransformer(\n",
     "    [(\"cat_preprocessor\", categorical_preprocessor, categorical_columns)],\n",
     "    remainder=\"passthrough\",\n",
+    "    # Silence a deprecation warning in scikit-learn v1.6 related to how the\n",
+    "    # ColumnTransformer stores an attribute that we do not use in this notebook\n",
+    "    force_int_remainder_cols=False,\n",
     ")"
    ]
   },
