Missing notebook sync

--- a/full-index.ipynb
+++ b/full-index.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "* [🎥 Intuitions on ensemble models: boosting](https://inria.github.io/scikit-learn-mooc/ensemble/boosting_slides.html)\n",
     "* [Adaptive Boosting (AdaBoost)](notebooks/ensemble_adaboost.ipynb)\n",
-    "* [Gradient-boosting decision tree (GBDT)](notebooks/ensemble_gradient_boosting.ipynb)\n",
+    "* [Gradient-boosting decision tree](notebooks/ensemble_gradient_boosting.ipynb)\n",
     "* [📝 Exercise M6.03](notebooks/ensemble_ex_03.ipynb)\n",
     "* [📃 Solution for Exercise M6.03](notebooks/ensemble_sol_03.ipynb)\n",
     "* [Speeding-up gradient-boosting](notebooks/ensemble_hist_gradient_boosting.ipynb)\n",
