--- a/notebooks/cross_validation_time.ipynb
+++ b/notebooks/cross_validation_time.ipynb
@@ -88,18 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "data, target = quotes.drop(columns=[\"Chevron\"]), quotes[\"Chevron\"]\n",
-    "data_train, data_test, target_train, target_test = train_test_split(\n",
-    "    data, target, shuffle=True, random_state=0\n",
-    ")\n",
-    "\n",
-    "# Shuffling breaks the index order, but we still want it to be time-ordered\n",
-    "data_train.sort_index(ascending=True, inplace=True)\n",
-    "data_test.sort_index(ascending=True, inplace=True)\n",
-    "target_train.sort_index(ascending=True, inplace=True)\n",
-    "target_test.sort_index(ascending=True, inplace=True)"
+    "data, target = quotes.drop(columns=[\"Chevron\"]), quotes[\"Chevron\"]"
    ]
   },
   {
@@ -157,9 +146,7 @@
    "source": [
     "from sklearn.model_selection import cross_val_score\n",
     "\n",
-    "test_score = cross_val_score(\n",
-    "    regressor, data_train, target_train, cv=cv, n_jobs=2\n",
-    ")\n",
+    "test_score = cross_val_score(regressor, data, target, cv=cv, n_jobs=2)\n",
     "print(f\"The mean R2 is: {test_score.mean():.2f} \u00b1 {test_score.std():.2f}\")"
    ]
   },
@@ -183,9 +170,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "data_train, data_test, target_train, target_test = train_test_split(\n",
+    "    data, target, shuffle=True, random_state=0\n",
+    ")\n",
+    "\n",
+    "# Shuffling breaks the index order, but we still want it to be time-ordered\n",
+    "data_train.sort_index(ascending=True, inplace=True)\n",
+    "data_test.sort_index(ascending=True, inplace=True)\n",
+    "target_train.sort_index(ascending=True, inplace=True)\n",
+    "target_test.sort_index(ascending=True, inplace=True)\n",
+    "\n",
     "regressor.fit(data_train, target_train)\n",
     "target_predicted = regressor.predict(data_test)\n",
-    "# Affect the index of `target_predicted` to ease the plotting\n",
+    "# Recover the `DatetimeIndex` from `target_test` for correct plotting\n",
     "target_predicted = pd.Series(target_predicted, index=target_test.index)"
    ]
   },
@@ -260,7 +259,6 @@
     "    data,\n",
     "    target,\n",
     "    shuffle=False,\n",
-    "    random_state=0,\n",
     ")\n",
     "regressor.fit(data_train, target_train)\n",
     "target_predicted = regressor.predict(data_test)\n",
