--- a/notebooks/parameter_tuning_sol_03.ipynb
+++ b/notebooks/parameter_tuning_sol_03.ipynb
@@ -146,7 +146,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "lines_to_next_cell": 0,
     "tags": [
      "solution"
     ]
@@ -160,7 +159,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
    "source": [
     "As we used `neg_mean_absolute_error` as score metric, we should multiply the\n",
     "score results with minus 1 to get mean absolute error values:"
