--- a/notebooks/03_categorical_pipeline_column_transformer.ipynb
+++ b/notebooks/03_categorical_pipeline_column_transformer.ipynb
@@ -96,9 +96,10 @@
     "  categories.\n",
     "* **numerical scaling** numerical features which will be standardized.\n",
     "\n",
-    "Now, we create our `ColumnTransfomer` by specifying three values: the\n",
-    "preprocessor name, the transformer, and the columns. First, let's create the\n",
-    "preprocessors for the numerical and categorical parts."
+    "Now, we create our `ColumnTransfomer` using the helper function\n",
+    "`make_column_transformer`. We specify two values: the transformer, and the\n",
+    "columns. First, let's create the preprocessors for the numerical and\n",
+    "categorical parts."
    ]
   },
   {
@@ -127,13 +128,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [\n",
-    "        (\"one-hot-encoder\", categorical_preprocessor, categorical_columns),\n",
-    "        (\"standard_scaler\", numerical_preprocessor, numerical_columns),\n",
-    "    ]\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
+    "    (numerical_preprocessor, numerical_columns),\n",
     ")"
    ]
   },
@@ -365,8 +364,8 @@
     "    handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
     ")\n",
     "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [(\"categorical\", categorical_preprocessor, categorical_columns)],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
     "    remainder=\"passthrough\",\n",
     ")\n",
     "\n",
