--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then use a `ColumnTransformer` to select the categorical columns and apply\n",
+    "We then use `make_column_transformer` to select the categorical columns and apply\n",
     "the `OrdinalEncoder` to them."
    ]
   },
@@ -152,10 +152,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [(\"cat_preprocessor\", categorical_preprocessor, categorical_columns)],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
     "    remainder=\"passthrough\",\n",
     "    # Silence a deprecation warning in scikit-learn v1.6 related to how the\n",
     "    # ColumnTransformer stores an attribute that we do not use in this notebook\n",
