--- a/notebooks/parameter_tuning_sol_02.ipynb
+++ b/notebooks/parameter_tuning_sol_02.ipynb
@@ -41,21 +41,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "from sklearn.compose import make_column_selector as selector\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "\n",
     "categorical_preprocessor = OrdinalEncoder(\n",
     "    handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
     ")\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [\n",
-    "        (\n",
-    "            \"cat_preprocessor\",\n",
-    "            categorical_preprocessor,\n",
-    "            selector(dtype_include=object),\n",
-    "        )\n",
-    "    ],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, selector(dtype_include=object)),\n",
     "    remainder=\"passthrough\",\n",
     ")\n",
     "\n",
@@ -152,6 +146,13 @@
     "\n",
     "print(f\"Test score after the parameter tuning: {test_score:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
