--- a/notebooks/03_categorical_pipeline_ex_02.ipynb
+++ b/notebooks/03_categorical_pipeline_ex_02.ipynb
@@ -82,17 +82,18 @@
     "\n",
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "\n",
     "categorical_preprocessor = OrdinalEncoder(\n",
     "    handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
     ")\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [(\"categorical\", categorical_preprocessor, categorical_columns)],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
     "    remainder=\"passthrough\",\n",
     ")\n",
+    "\n",
     "\n",
     "model = make_pipeline(preprocessor, HistGradientBoostingClassifier())\n",
     "\n",
