--- a/notebooks/03_categorical_pipeline_sol_02.ipynb
+++ b/notebooks/03_categorical_pipeline_sol_02.ipynb
@@ -82,17 +82,18 @@
     "\n",
     "from sklearn.model_selection import cross_validate\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.compose import make_column_transformer\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
     "from sklearn.ensemble import HistGradientBoostingClassifier\n",
     "\n",
     "categorical_preprocessor = OrdinalEncoder(\n",
     "    handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
     ")\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [(\"categorical\", categorical_preprocessor, categorical_columns)],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
     "    remainder=\"passthrough\",\n",
     ")\n",
+    "\n",
     "\n",
     "model = make_pipeline(preprocessor, HistGradientBoostingClassifier())\n",
     "\n",
@@ -130,17 +131,12 @@
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [\n",
-    "        (\"numerical\", StandardScaler(), numerical_columns),\n",
-    "        (\n",
-    "            \"categorical\",\n",
-    "            OrdinalEncoder(\n",
-    "                handle_unknown=\"use_encoded_value\", unknown_value=-1\n",
-    "            ),\n",
-    "            categorical_columns,\n",
-    "        ),\n",
-    "    ]\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (StandardScaler(), numerical_columns),\n",
+    "    (\n",
+    "        OrdinalEncoder(handle_unknown=\"use_encoded_value\", unknown_value=-1),\n",
+    "        categorical_columns,\n",
+    "    ),\n",
     ")\n",
     "\n",
     "model = make_pipeline(preprocessor, HistGradientBoostingClassifier())\n",
@@ -209,8 +205,8 @@
     "categorical_preprocessor = OneHotEncoder(\n",
     "    handle_unknown=\"ignore\", sparse_output=False\n",
     ")\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    [(\"one-hot-encoder\", categorical_preprocessor, categorical_columns)],\n",
+    "preprocessor = make_column_transformer(\n",
+    "    (categorical_preprocessor, categorical_columns),\n",
     "    remainder=\"passthrough\",\n",
     ")\n",
     "\n",
