Synch exercise notebooks

--- a/notebooks/clustering_kmeans_ex_01.ipynb
+++ b/notebooks/clustering_kmeans_ex_01.ipynb
@@ -15,7 +15,8 @@
     "- Monetary Value: How much do they spend.\n",
     "\n",
     "It is commonly used in marketing and has received particular attention in\n",
-    "retail and professional services industries as well."
+    "retail and professional services industries as well. Here we subsample the\n",
+    "dataset to ease the calculations."
    ]
   },
   {
@@ -27,6 +28,7 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv(\"../datasets/rfm_segmentation.csv\")\n",
+    "data = data.sample(n=2000, random_state=0).reset_index(drop=True)\n",
     "data"
    ]
   },
@@ -34,15 +36,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As k-means clustering relies on computing distances between samples, in\n",
-    "general we need to scale our data before training the clustering model. That\n",
-    "was not the case in our previous notebook, as the features in the Mall\n",
-    "customers dataset already have the same scale.\n",
+    "We can explore the data using a seborn `pairplot`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
     "\n",
-    "Show that scaling is important or else \"monetary\" have a dominant impact when\n",
-    "forming clusters. You can adapt the helper function `plot_clusters` from the\n",
-    "previous notebook to make plots using `KMeans` for `n_clusters_values = [2, 4,\n",
-    "6, 8]` without scaling."
+    "_ = sns.pairplot(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As k-means clustering relies on computing distances between samples, in\n",
+    "general we need to scale our data before training the clustering model.\n",
+    "\n",
+    "Modify the color of the `pairplot` to represent the cluster labels as\n",
+    "predicted by `KMeans` without any scaling. Try different values for\n",
+    "`n_clusters`, for instance, `n_clusters_values=[2, 3, 4]`. Do all features\n",
+    "contribute equally to forming the clusters in their original scale?"
    ]
   },
   {
@@ -61,9 +79,10 @@
    "outputs": [],
    "source": [
     "# Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
-    "# as the final predictor. Set the `random_state` for reproducibility. Then, make\n",
-    "# a plot of the WCSS or inertia for `n_clusters` varying from 2 to 10. You can\n",
-    "# use the following helper function for such purpose:"
+    "# as the final predictor. Set the `random_state` of `KMeans` for\n",
+    "# reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
+    "# varying from 1 to 10. You can use the following helper function for such\n",
+    "# purpose:"
    ]
   },
   {
@@ -79,7 +98,7 @@
     "    model,\n",
     "    data,\n",
     "    score_type=\"inertia\",\n",
-    "    n_clusters_values=range(2, 11),\n",
+    "    n_clusters_values=None,\n",
     "    alpha=1.0,\n",
     "    title=None,\n",
     "):\n",
@@ -90,17 +109,21 @@
     "        model: A pipeline whose last step has a `n_clusters` hyperparameter.\n",
     "        data: The input data to cluster.\n",
     "        score_type: \"inertia\" or \"silhouette\" to decide which score to compute.\n",
-    "        n_clusters_values: Iterable of integers representing `n_clusters` to try.\n",
     "        alpha: Transparency of the plot line, useful when several plots overlap.\n",
     "        title: Optional title to set; default title used if None.\n",
     "    \"\"\"\n",
     "    scores = []\n",
     "\n",
+    "    if n_clusters_values is None:\n",
+    "        if score_type == \"inertia\":\n",
+    "            n_clusters_values = range(1, 11)\n",
+    "        else:\n",
+    "            n_clusters_values = range(2, 11)\n",
+    "\n",
     "    for n_clusters in n_clusters_values:\n",
     "        model[-1].set_params(n_clusters=n_clusters)\n",
-    "\n",
     "        if score_type == \"inertia\":\n",
-    "            ylabel = \"Inertia\"\n",
+    "            ylabel = \"WCSS (inertia)\"\n",
     "            model.fit(data)\n",
     "            scores.append(model[-1].inertia_)\n",
     "        elif score_type == \"silhouette\":\n",
@@ -135,13 +158,14 @@
    "source": [
     "Let's check if the best choice of n_clusters remains stable when resampling\n",
     "the dataset. For such purpose:\n",
-    "- Keep a fixed `random_state` for the `KMeans` step to isolate the\n",
-    "  effect of data resampling.\n",
-    "- Generate resamplings consisting of 90% of the data by using\n",
-    "  `train_test_split` with `train_size=0.9`\n",
+    "- Keep a fixed `random_state` for the `KMeans` step to isolate the effect of\n",
+    "  data resampling.\n",
+    "- Generate resamplings consisting of 50% of the data by using\n",
+    "  `train_test_split` with `train_size=0.5`. Changing the `random_state`\n",
+    "  to do the split leads to different resamplings.\n",
     "- Use the `plot_n_clusters_scores` function inside a `for` loop to make\n",
     "  multiple overlapping plots of the inertia, each time using a different\n",
-    "  resamplings.\n",
+    "  resampling. 10 resamplings should be enough to draw conclusions.\n",
     "\n",
     "Is the elbow (optimal number of clusters) stable across all different\n",
     "resamplings?"
@@ -195,9 +219,9 @@
    "metadata": {},
    "source": [
     "Repeat the experiment, but this time determine if the optimal number of\n",
-    "clusters is stable across subsamplings when using the `silhouette_score`. Be\n",
-    "aware that computing the silhouette score is more computationally costly than\n",
-    "computing the inertia."
+    "clusters (with `StandarScaler` and `n_init=5`) is stable across subsamplings\n",
+    "in terms of the `silhouette_score`. Be aware that computing the silhouette\n",
+    "score is more computationally costly than computing the inertia."
    ]
   },
   {
@@ -231,7 +255,7 @@
     "model = make_pipeline(QuantileTransformer(), KMeans(n_init=5, random_state=0))\n",
     "for random_state in range(1, 11):\n",
     "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.9, random_state=random_state\n",
+    "        data, train_size=0.5, random_state=random_state\n",
     "    )\n",
     "    plot_n_clusters_scores(\n",
     "        model,\n",
