--- a/notebooks/clustering_kmeans_sol_01.ipynb
+++ b/notebooks/clustering_kmeans_sol_01.ipynb
@@ -15,7 +15,8 @@
     "- Monetary Value: How much do they spend.\n",
     "\n",
     "It is commonly used in marketing and has received particular attention in\n",
-    "retail and professional services industries as well."
+    "retail and professional services industries as well. Here we subsample the\n",
+    "dataset to ease the calculations."
    ]
   },
   {
@@ -27,6 +28,7 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv(\"../datasets/rfm_segmentation.csv\")\n",
+    "data = data.sample(n=2000, random_state=0).reset_index(drop=True)\n",
     "data"
    ]
   },
@@ -34,15 +36,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As k-means clustering relies on computing distances between samples, in\n",
-    "general we need to scale our data before training the clustering model. That\n",
-    "was not the case in our previous notebook, as the features in the Mall\n",
-    "customers dataset already have the same scale.\n",
+    "We can explore the data using a seborn `pairplot`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
     "\n",
-    "Show that scaling is important or else \"monetary\" have a dominant impact when\n",
-    "forming clusters. You can adapt the helper function `plot_clusters` from the\n",
-    "previous notebook to make plots using `KMeans` for `n_clusters_values = [2, 4,\n",
-    "6, 8]` without scaling."
+    "_ = sns.pairplot(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As k-means clustering relies on computing distances between samples, in\n",
+    "general we need to scale our data before training the clustering model.\n",
+    "\n",
+    "Modify the color of the `pairplot` to represent the cluster labels as\n",
+    "predicted by `KMeans` without any scaling. Try different values for\n",
+    "`n_clusters`, for instance, `n_clusters_values=[2, 3, 4]`. Do all features\n",
+    "contribute equally to forming the clusters in their original scale?"
    ]
   },
   {
@@ -53,39 +71,28 @@
    "source": [
     "# solution\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
+    "n_clusters_values = [2, 3, 4]\n",
     "\n",
-    "def plot_clusters(model, ax):\n",
-    "\n",
-    "    cluster_labels = model.fit_predict(data)\n",
-    "    n_clusters = len(np.unique(cluster_labels))\n",
-    "\n",
-    "    ax.scatter(\n",
-    "        data[\"monetary\"],\n",
-    "        data[\"frequency\"],\n",
-    "        data[\"recency\"],\n",
-    "        c=cluster_labels,\n",
-    "        s=50,\n",
-    "        alpha=0.7,\n",
-    "    )\n",
-    "    ax.set_box_aspect(None, zoom=0.84)\n",
-    "    ax.set_xlabel(\"Monetary\", labelpad=15)\n",
-    "    ax.set_ylabel(\"Frequency\", labelpad=15)\n",
-    "    ax.set_zlabel(\"Recency\", labelpad=15)\n",
-    "    ax.set_title(f\"n_clusters={n_clusters}\", y=0.99)\n",
-    "    _ = plt.tight_layout()\n",
-    "\n",
-    "\n",
-    "n_clusters_values = [2, 4, 6, 8]\n",
-    "fig, axes = plt.subplots(\n",
-    "    nrows=2, ncols=2, figsize=(17, 15), subplot_kw={\"projection\": \"3d\"}\n",
-    ")\n",
-    "\n",
-    "for ax, n_clusters in zip(axes.flatten(), n_clusters_values):\n",
+    "for n_clusters in n_clusters_values:\n",
     "    model = KMeans(n_clusters=n_clusters, random_state=0)\n",
-    "    plot_clusters(model, ax)"
+    "    clustered_data = data.copy()\n",
+    "    clustered_data[\"cluster label\"] = model.fit_predict(data)\n",
+    "    sns.pairplot(clustered_data, hue=\"cluster label\", palette=\"tab10\")\n",
+    "    plt.title(f\"n_clusters={n_clusters}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "source": [
+    "Without scaling \"monetary\" has a dominant impact when forming clusters,\n",
+    "regardless of the number of clusters."
    ]
   },
   {
@@ -95,9 +102,10 @@
    "outputs": [],
    "source": [
     "# Create a pipeline composed by a `StandardScaler` followed by a `KMeans` step\n",
-    "# as the final predictor. Set the `random_state` for reproducibility. Then, make\n",
-    "# a plot of the WCSS or inertia for `n_clusters` varying from 2 to 10. You can\n",
-    "# use the following helper function for such purpose:"
+    "# as the final predictor. Set the `random_state` of `KMeans` for\n",
+    "# reproducibility. Then, make a plot of the WCSS or inertia for `n_clusters`\n",
+    "# varying from 1 to 10. You can use the following helper function for such\n",
+    "# purpose:"
    ]
   },
   {
@@ -113,7 +121,7 @@
     "    model,\n",
     "    data,\n",
     "    score_type=\"inertia\",\n",
-    "    n_clusters_values=range(2, 11),\n",
+    "    n_clusters_values=None,\n",
     "    alpha=1.0,\n",
     "    title=None,\n",
     "):\n",
@@ -124,17 +132,21 @@
     "        model: A pipeline whose last step has a `n_clusters` hyperparameter.\n",
     "        data: The input data to cluster.\n",
     "        score_type: \"inertia\" or \"silhouette\" to decide which score to compute.\n",
-    "        n_clusters_values: Iterable of integers representing `n_clusters` to try.\n",
     "        alpha: Transparency of the plot line, useful when several plots overlap.\n",
     "        title: Optional title to set; default title used if None.\n",
     "    \"\"\"\n",
     "    scores = []\n",
     "\n",
+    "    if n_clusters_values is None:\n",
+    "        if score_type == \"inertia\":\n",
+    "            n_clusters_values = range(1, 11)\n",
+    "        else:\n",
+    "            n_clusters_values = range(2, 11)\n",
+    "\n",
     "    for n_clusters in n_clusters_values:\n",
     "        model[-1].set_params(n_clusters=n_clusters)\n",
-    "\n",
     "        if score_type == \"inertia\":\n",
-    "            ylabel = \"Inertia\"\n",
+    "            ylabel = \"WCSS (inertia)\"\n",
     "            model.fit(data)\n",
     "            scores.append(model[-1].inertia_)\n",
     "        elif score_type == \"silhouette\":\n",
@@ -184,13 +196,14 @@
    "source": [
     "Let's check if the best choice of n_clusters remains stable when resampling\n",
     "the dataset. For such purpose:\n",
-    "- Keep a fixed `random_state` for the `KMeans` step to isolate the\n",
-    "  effect of data resampling.\n",
-    "- Generate resamplings consisting of 90% of the data by using\n",
-    "  `train_test_split` with `train_size=0.9`\n",
+    "- Keep a fixed `random_state` for the `KMeans` step to isolate the effect of\n",
+    "  data resampling.\n",
+    "- Generate resamplings consisting of 50% of the data by using\n",
+    "  `train_test_split` with `train_size=0.5`. Changing the `random_state`\n",
+    "  to do the split leads to different resamplings.\n",
     "- Use the `plot_n_clusters_scores` function inside a `for` loop to make\n",
     "  multiple overlapping plots of the inertia, each time using a different\n",
-    "  resamplings.\n",
+    "  resampling. 10 resamplings should be enough to draw conclusions.\n",
     "\n",
     "Is the elbow (optimal number of clusters) stable across all different\n",
     "resamplings?"
@@ -207,7 +220,7 @@
     "\n",
     "for random_state in range(1, 11):\n",
     "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.9, random_state=random_state\n",
+    "        data, train_size=0.5, random_state=random_state\n",
     "    )\n",
     "    plot_n_clusters_scores(\n",
     "        model,\n",
@@ -226,8 +239,8 @@
     ]
    },
    "source": [
-    "The inertia changes drastically as a function of the subsamples, it is\n",
-    "then not possible to systematically define an optimal number of clusters."
+    "The inertia changes drastically as a function of the subsamples, it is then\n",
+    "not possible to systematically define an optimal number of clusters."
    ]
   },
   {
@@ -275,14 +288,14 @@
     "# solution\n",
     "for random_state in range(1, 11):\n",
     "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.9, random_state=random_state\n",
+    "        data, train_size=0.5, random_state=random_state\n",
     "    )\n",
     "    plot_n_clusters_scores(\n",
     "        model,\n",
     "        data_subsample,\n",
     "        score_type=\"inertia\",\n",
     "        alpha=0.2,\n",
-    "        title=\"Stability of inertia with n_init=5\",\n",
+    "        title=\"Stability of inertia with\\nn_init=5 and StandardScaler\",\n",
     "    )"
    ]
   },
@@ -303,9 +316,9 @@
    "metadata": {},
    "source": [
     "Repeat the experiment, but this time determine if the optimal number of\n",
-    "clusters is stable across subsamplings when using the `silhouette_score`. Be\n",
-    "aware that computing the silhouette score is more computationally costly than\n",
-    "computing the inertia."
+    "clusters (with `StandarScaler` and `n_init=5`) is stable across subsamplings\n",
+    "in terms of the `silhouette_score`. Be aware that computing the silhouette\n",
+    "score is more computationally costly than computing the inertia."
    ]
   },
   {
@@ -317,14 +330,14 @@
     "# solution\n",
     "for random_state in range(1, 11):\n",
     "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.9, random_state=random_state\n",
+    "        data, train_size=0.5, random_state=random_state\n",
     "    )\n",
     "    plot_n_clusters_scores(\n",
     "        model,\n",
     "        data_subsample,\n",
     "        score_type=\"silhouette\",\n",
     "        alpha=0.2,\n",
-    "        title=\"Stability of silhouette score with n_init=5\",\n",
+    "        title=\"Stability of silhouette score\\nwith n_init=5 and StandardScaler\",\n",
     "    )"
    ]
   },
@@ -338,7 +351,7 @@
    "source": [
     "The silhouette score also varies as a function of the resampling, even after\n",
     "setting `n_init=5`. It may seem that the optimal number of clusters is\n",
-    "sometimes 5, 6, or 9, depending on the sampling. We can conclude that in this\n",
+    "sometimes 2, 4, 5 or 6 depending on the sampling. We can conclude that in this\n",
     "case, what makes challenging to find the optimal number of clusters is not\n",
     "related to the metric, but possibly to the data itself, or to the modeling\n",
     "pipeline."
@@ -366,7 +379,7 @@
     "model = make_pipeline(QuantileTransformer(), KMeans(n_init=5, random_state=0))\n",
     "for random_state in range(1, 11):\n",
     "    data_subsample, _ = train_test_split(\n",
-    "        data, train_size=0.9, random_state=random_state\n",
+    "        data, train_size=0.5, random_state=random_state\n",
     "    )\n",
     "    plot_n_clusters_scores(\n",
     "        model,\n",
@@ -388,12 +401,12 @@
     "The silhouette score is much more stable across resamplings. Moreover, the\n",
     "optimal number of clusters seems to be 2, as it provides the highest score,\n",
     "indicating that the data points are well-separated and correctly grouped with\n",
-    "good cohesion. However, 4 or 6 clusters may still make sense if the clustering\n",
-    "has specific use cases or domain relevance, but you should be cautious as the\n",
-    "relatively low silhouette score suggests that some points may be misassigned.\n",
+    "good cohesion. However 4 or 6 clusters may still make sense if the clustering\n",
+    "has specific use cases or domain relevance.\n",
     "\n",
-    "Indeed, we can plot the transformed space and observe some samples seem to be\n",
-    "misassigned."
+    "Notice that you should still be cautious as the relatively low values of the\n",
+    "silhouette scores suggest that some points may be \"misassigned\". To verify\n",
+    "this, we can plot the labels when setting `n_clusters=6`."
    ]
   },
   {
@@ -406,8 +419,10 @@
    },
    "outputs": [],
    "source": [
+    "n_clusters=6\n",
     "model = make_pipeline(\n",
-    "    QuantileTransformer(), KMeans(n_init=5, n_clusters=6, random_state=0)\n",
+    "    QuantileTransformer(),\n",
+    "    KMeans(n_init=5, n_clusters=n_clusters, random_state=0),\n",
     ")\n",
     "model"
    ]
@@ -422,13 +437,49 @@
    },
    "outputs": [],
    "source": [
+    "clustered_data = data.copy()\n",
+    "clustered_data[\"cluster label\"] = model.fit_predict(data)\n",
+    "\n",
+    "sns.pairplot(clustered_data, hue=\"cluster label\", palette=\"tab10\")\n",
+    "plt.title(f\"n_clusters={n_clusters}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "source": [
+    "Indeed, \"monetary\" exactly equal to 0 is divided into 2 clusters (the plot in\n",
+    "the middle of the `pairplot`), whereas it would feel more reasonably to have\n",
+    "those points form a single cluster.\n",
+    "\n",
+    "Alternatively, we can plot the labels in the transformed space to better\n",
+    "observe that some data points seem to be misassigned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "solution"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib.colors import ListedColormap\n",
+    "\n",
     "cluster_labels = model.fit_predict(data)\n",
+    "cmap = ListedColormap(plt.get_cmap(\"tab10\").colors[:n_clusters])\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(8, 8), subplot_kw={\"projection\": \"3d\"})\n",
     "scatter = ax.scatter(\n",
     "    *model[:-1].transform(data).T,\n",
     "    c=cluster_labels,\n",
-    "    cmap=\"viridis\",\n",
+    "    cmap=cmap,\n",
     "    s=50,\n",
     "    alpha=0.7,\n",
     ")\n",
@@ -448,18 +499,17 @@
     ]
    },
    "source": [
-    "From the plot above, it would feel more natural to cluster together all\n",
-    "samples with transformed monetary equal to 0 instead of dividing it into 2\n",
-    "different clusters. Moreover, those clusters seem to take samples with low but\n",
-    "non-zero values of monetary, that would belong more naturally to other\n",
-    "clusters.\n",
+    "Observe that the clusters at \"transformed monetary\" exactly equal to 0 are\n",
+    "grouped together with samples with low but non-zero values of \"transformed\n",
+    "monetary\", that would belong more naturally to other clusters.\n",
     "\n",
-    "What happens here is that data points at transformed monetary equal to 0 are\n",
+    "What happens here is that data points at \"transformed monetary\" equal to 0 are\n",
     "not isotropic in the 3 dimensions, i.e. they are spread on a plane of\n",
-    "transformed recency and frequency ranging from 0 to 1. Remember that k-means\n",
-    "consists of minimizing samples' euclidean distances to their assigned\n",
-    "centroid. As a consequence, k-means is more appropriate for clusters that are\n",
-    "isotropic and normally distributed.\n",
+    "\"transformed recency\" and \"transformed frequency\" ranging from 0 to 1.\n",
+    "Remember that k-means consists of minimizing each point's euclidean distance\n",
+    "to its assigned centroid. As a consequence, k-means is more appropriate for\n",
+    "clusters that are isotropic and normally distributed, in other words, that\n",
+    "group around a center.\n",
     "\n",
     "We will learn more about how to deal with anisotropic clusters in a future\n",
     "notebook."
