Rerender the first notebook

--- a/notebooks/clustering_kmeans.ipynb
+++ b/notebooks/clustering_kmeans.ipynb
@@ -253,15 +253,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "\n",
     "Now the results of the k-means cluster better match our visual intuition on this pair of features.\n",
     "\n",
     "Let's do a similar analysis on the second pair of features, namely\n",
-    "\"Culmen Depth (mm)\" and \"Body Mass (g)\". To do so we refactor the code above in a utility function:\n",
-    "\n",
-    "\n",
+    "\"Culmen Depth (mm)\" and \"Body Mass (g)\". To do so we refactor the code above in a utility function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_kmeans_clusters_on_2d_data(\n",
     "    clustering_model,\n",
     "    data,\n",
@@ -304,8 +312,15 @@
     "identified clusters that match our visual intuition.\n",
     "\n",
     "We can also try to apply the k-means algorithm with a larger value for\n",
-    "`n_clusters`:\n",
-    "\n",
+    "`n_clusters`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "plot_kmeans_clusters_on_2d_data(\n",
     "    make_pipeline(\n",
     "        StandardScaler(),\n",
@@ -465,8 +480,15 @@
     "meaningful clusters in the data automatically.\n",
     "\n",
     "We also include the `Sex` feature in the clustering model to see whether\n",
-    "it can help the algorithm to find better clusters.\n",
-    "\n",
+    "it can help the algorithm to find better clusters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from sklearn.compose import make_column_transformer, make_column_selector\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
