Rerender the first notebook

--- a/notebooks/clustering_kmeans.ipynb
+++ b/notebooks/clustering_kmeans.ipynb
@@ -150,8 +150,15 @@
     "with an arbitrary integer between 0 and `n_clusters - 1`.\n",
     "\n",
     "Let's add consolidate these labels in the original dataframe and visualize the\n",
-    "clusters:\n",
-    "\n",
+    "clusters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "clustered_female_peng = female_penguins.copy()\n",
     "clustered_female_peng[\"K-means label\"] = kmeans_labels_cd_vs_bm\n",
     "ax = sns.scatterplot(\n",
@@ -187,7 +194,15 @@
     "\n",
     "We can visualize this by plotting the data by disabling the automated visual\n",
     "scaling of the axes by manually setting the same numerical limits for both\n",
-    "axes:\n",
+    "axes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "min_numerical_value = 0\n",
     "max_numerical_value = clustered_female_peng[\"Body Mass (g)\"].max() * 1.1\n",
     "ax = sns.scatterplot(\n",
@@ -342,7 +357,7 @@
     "separated.\n",
     "\n",
     "Let's now see we can use this intuition on cluster separation to identify\n",
-    "suitable valuers for the number of clusters based on heuristic methods\n",
+    "suitable values for the number of clusters based on heuristic methods\n",
     "introduced earlier in the course.\n",
     "\n",
     "Let's start by plotting the evolution of the WCSS (Within-Cluster Sum of\n",
