Rerender the first notebook

--- a/notebooks/clustering_kmeans.ipynb
+++ b/notebooks/clustering_kmeans.ipynb
@@ -149,7 +149,7 @@
     "The `fit_predict` method returns the cluster labels for each data point coded\n",
     "with an arbitrary integer between 0 and `n_clusters - 1`.\n",
     "\n",
-    "Let's add consolidate these labels in the original dataframe and visualize the\n",
+    "Let's consolidate these labels in the original dataframe and visualize the\n",
     "clusters:"
    ]
   },
@@ -160,12 +160,11 @@
    "outputs": [],
    "source": [
     "clustered_female_peng = female_penguins.copy()\n",
-    "clustered_female_peng[\"K-means label\"] = kmeans_labels_cd_vs_bm\n",
     "ax = sns.scatterplot(\n",
-    "    data=clustered_female_peng,\n",
+    "    data=female_penguins.assign(kmeans_labels=kmeans_labels_cd_vs_bm),\n",
     "    x=\"Culmen Length (mm)\",\n",
     "    y=\"Body Mass (g)\",\n",
-    "    hue=\"K-means label\",\n",
+    "    hue=\"kmeans_labels\",\n",
     "    palette=\"deep\",\n",
     "    alpha=0.7,\n",
     ")\n",
@@ -177,8 +176,8 @@
    "metadata": {},
    "source": [
     "\n",
-    "The result is disappointing: the 3 clusters found by k-means  do not match\n",
-    "what would have naively expected from the scatter plot.\n",
+    "The result is disappointing: the 3 clusters found by k-means do not match\n",
+    "what we would have naively expected from the scatter plot.\n",
     "\n",
     "What could explain this?\n",
     "\n",
@@ -206,10 +205,10 @@
     "min_numerical_value = 0\n",
     "max_numerical_value = clustered_female_peng[\"Body Mass (g)\"].max() * 1.1\n",
     "ax = sns.scatterplot(\n",
-    "    data=clustered_female_peng,\n",
+    "    data=clustered_female_peng.assign(kmeans_labels=kmeans_labels_cd_vs_bm),\n",
     "    x=\"Culmen Length (mm)\",\n",
     "    y=\"Body Mass (g)\",\n",
-    "    hue=\"K-means label\",\n",
+    "    hue=\"kmeans_labels\",\n",
     "    palette=\"deep\",\n",
     "    alpha=0.7,\n",
     ")\n",
@@ -273,10 +272,12 @@
    },
    "source": [
     "\n",
-    "Now the results of the k-means cluster better match our visual intuition on this pair of features.\n",
+    "Now the results of the k-means cluster better match our visual intuition on\n",
+    "this pair of features.\n",
     "\n",
-    "Let's do a similar analysis on the second pair of features, namely\n",
-    "\"Culmen Depth (mm)\" and \"Body Mass (g)\". To do so we refactor the code above in a utility function:"
+    "Let's do a similar analysis on the second pair of features, namely \"Culmen\n",
+    "Depth (mm)\" and \"Body Mass (g)\". To do so, let's refactor the code above as a\n",
+    "utility function:"
    ]
   },
   {
@@ -294,13 +295,11 @@
     "    labels = clustering_model.fit_predict(\n",
     "        data[[first_feature_name, second_feature_name]]\n",
     "    )\n",
-    "    clustered_data = data.copy()\n",
-    "    clustered_data[\"K-means label\"] = labels\n",
     "    ax = sns.scatterplot(\n",
-    "        data=clustered_data,\n",
+    "        data=data.assign(kmeans_labels=labels),\n",
     "        x=first_feature_name,\n",
     "        y=second_feature_name,\n",
-    "        hue=\"K-means label\",\n",
+    "        hue=\"kmeans_labels\",\n",
     "        palette=\"deep\",\n",
     "        alpha=0.7,\n",
     "    )\n",
@@ -356,7 +355,7 @@
     "build as many groups as requested even if the resulting groups are not well\n",
     "separated.\n",
     "\n",
-    "Let's now see we can use this intuition on cluster separation to identify\n",
+    "Let's now see if can use this intuition on cluster separation to identify\n",
     "suitable values for the number of clusters based on heuristic methods\n",
     "introduced earlier in the course.\n",
     "\n",
@@ -557,14 +556,15 @@
    "source": [
     "\n",
     "Since this is high-dimensional data (5D), the pairplot (computed only for the\n",
-    "4 numerical features) only offers a limited perspective on the clusters. But\n",
-    "they do seem meaningful, and in particular we can notice that they could\n",
-    "potentially correspond to the 3 species of penguins present in the dataset\n",
-    "(Adelie, Chinstrap, and Gentoo) further splitted by Sex (2 clusters for each\n",
-    "species, one for males and one for females).\n",
+    "4 numerical features) only offers a limited perspective on the clusters.\n",
+    "Despite this limitation, the clusters do appear meaningful, and in particular\n",
+    "we can notice that they could potentially correspond to the 3 species of\n",
+    "penguins present in the dataset (Adelie, Chinstrap, and Gentoo) further\n",
+    "splitted by Sex (2 clusters for each species, one for males and one for\n",
+    "females).\n",
     "\n",
-    "Let's try to confirm this hypothesis by looking at the original\n",
-    "\"Species\" labels combined with the \"Sex\":"
+    "Let's try to confirm this hypothesis by looking at the original \"Species\"\n",
+    "labels combined with the \"Sex\":"
    ]
   },
   {
