--- a/notebooks/01_tabular_data_exploration.ipynb
+++ b/notebooks/01_tabular_data_exploration.ipynb
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "An alternative is to omit the `head` method. This would output the intial and\n",
+    "An alternative is to omit the `head` method. This would output the initial and\n",
     "final rows and columns, but everything in between is not shown by default. It\n",
     "also provides the dataframe's dimensions at the bottom in the format `n_rows`\n",
     "x `n_columns`."
