--- a/notebooks/linear_models_sol_03.ipynb
+++ b/notebooks/linear_models_sol_03.ipynb
@@ -98,7 +98,7 @@
     "Since we scaled the features, the coefficients of the linear model can be\n",
     "meaningful compared directly. `\"capital-gain\"` is the most impacting feature.\n",
     "Just be aware not to draw conclusions on the causal effect provided the impact\n",
-    "of a feature. Interested readers are refered to the [example on Common\n",
+    "of a feature. Interested readers are referred to the [example on Common\n",
     "pitfalls in the interpretation of coefficients of linear\n",
     "models](https://scikit-learn.org/stable/auto_examples/inspection/plot_linear_model_coefficient_interpretation.html)\n",
     "or the [example on Failure of Machine Learning to infer causal\n",
