--- a/notebooks/logistic_regression.ipynb
+++ b/notebooks/logistic_regression.ipynb
@@ -390,7 +390,7 @@
     "function](https://en.wikipedia.org/wiki/Softmax_function) to make predictions.\n",
     "Giving more details on that scenario is beyond the scope of this MOOC.\n",
     "\n",
-    "In any case, interested users are refered to the [scikit-learn user guide](\n",
+    "In any case, interested users are referred to the [scikit-learn user guide](\n",
     "https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression)\n",
     "for a more mathematical description of the `predict_proba` method of the\n",
     "`LogisticRegression` and the respective normalization functions."
