--- a/notebooks/parameter_tuning_grid_search.ipynb
+++ b/notebooks/parameter_tuning_grid_search.ipynb
@@ -451,7 +451,7 @@
     "In this notebook we have seen:\n",
     "\n",
     "* how to optimize the hyperparameters of a predictive model via a grid-search;\n",
-    "* that searching for more than two hyperparamters is too costly;\n",
+    "* that searching for more than two hyperparameters is too costly;\n",
     "* that a grid-search does not necessarily find an optimal solution."
    ]
   }
