--- a/notebooks/trees_classification.ipynb
+++ b/notebooks/trees_classification.ipynb
@@ -9,7 +9,7 @@
     "In this notebook we illustrate decision trees in a multiclass classification\n",
     "problem by using the penguins dataset with 2 features and 3 classes.\n",
     "\n",
-    "For the sake of simplicity, we focus the discussion on the hyperparamter\n",
+    "For the sake of simplicity, we focus the discussion on the hyperparameter\n",
     "`max_depth`, which controls the maximal depth of the decision tree."
    ]
   },
