--- a/notebooks/linear_models_sol_02.ipynb
+++ b/notebooks/linear_models_sol_02.ipynb
@@ -22,7 +22,7 @@
     "disease. This would depend on the patient's Body Mass Index which is defined\n",
     "as `weight / height ** 2`.\n",
     "\n",
-    "We load the dataset penguins dataset. We first use a set of 3 numerical\n",
+    "We load the penguins dataset. We first use a set of 3 numerical\n",
     "features to predict the target, i.e. the body mass of the penguin."
    ]
   },
